tests/NormalTests/paczka1/fuzzy1/26778609.err
Error in line 10: 9hJH0 S5 23,2
Error in line 12: vWVJwU A509 7,0
Error in line 26: vWVJwU A470 56,2
Error in line 38: 8np A839 97,1
